# keycloak-pkce-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
certs/ca/: ca.crt  ca.key
certs/client/: lua_http_server.pem  lua_http_server.pkcs8.key  pkce-client.c.key  pkce-client.c.pem  pkce-client.cpp.crt  pkce-client.local.com.key  pkce-client.lua.pem  pkce-client.py.key
certs/keycloak/: keycloak.local.com.crt  keycloak.local.com.csr  keycloak.local.com.key  keycloak.p12
certs/nginx/: nginx.crt  nginx.key
cmake/: CodeCoverage.cmake
config/: app_config.json  civetweb.conf  library_config.json
docs/: api_reference.md  architecture.md  building.md  c_integration.md  core_components.md  getting_started.md  lua_integration.md  lua_openresty.md  python_integration.md  testing.md
examples/cpp/: CMakeLists.txt  app_context.hpp  main.cpp
examples/cpp/config/: app_config.hpp  config_loader.cpp  config_loader.hpp
examples/cpp/routes/: routes.cpp  routes.hpp
keycloak/: docker-compose.yml  nginx.test.conf  test-realm.json
keycloak/certs/: keycloak.p12
lib/include/keycloak/: keycloak_client.hpp  types.hpp
lib/include/keycloak/auth/: strategy.hpp  token_service.hpp
lib/include/keycloak/config/: config_loader.hpp  library_config.hpp
lib/include/keycloak/http/: http_client.hpp  proxy_config.hpp  ssl_config.hpp  transport.hpp
lib/include/keycloak/pkce/: state_store.hpp
lib/include/keycloak/utils/: logging.hpp  url_encode.hpp
lib/src/http/: http_client.cpp
lib/src/http/transport/: asio_transport.cpp  asio_transport.hpp
lib/src/keycloak/: keycloak_client.cpp
lib/src/keycloak/auth/: pkce_strategy.cpp  pkce_strategy.hpp
lib/src/pkce/: pkce.hpp  state_store.cpp  state_store.hpp
scripts/: kill_nginx.sh  run_lua_script.sh  setup_c_env.sh
scripts/certgen/: gen_ca_and_certs.sh  gen_keystore.sh  gen_lua_certs.sh  gen_lua_http_certs.sh  gen_nginx_cert.sh  san.cnf  test_keycloak.sh  test_lua_client.sh
scripts/tests/: test_keycloak.sh  test_lua_openresty.sh
tests/: CMakeLists.txt
tests/e2e/: keycloak_client_test.cpp
tests/integration/: auth_flow_test.cpp  token_exchange_test.cpp
tests/mocks/auth/: mock_auth_strategy.hpp  mock_token_service.hpp
tests/mocks/http/: mock_http_client.hpp
tests/mocks/pkce/: mock_state_store.hpp
tests/unit/auth/: strategy_test.cpp  token_service_test.cpp
tests/unit/http/: http_client_test.cpp
tests/unit/pkce/: pkce_test.cpp  state_store_test.cpp
wrappers/c/: CMakeLists.txt
wrappers/c/examples/basic/: app_settings.h  context.h  helpers.c  helpers.h  main.c  routes.c  routes.h
wrappers/c/include/: kc_pkce.h
wrappers/c/internal/: config_wrapper.cpp  config_wrapper.hpp  kc_pkce.cpp  pkce_wrapper.cpp  pkce_wrapper.hpp  proxy_settings.hpp
wrappers/lua/: CMakeLists.txt  keycloak_pkce.lua  mime.types  nginx.conf  standalone.lua
wrappers/python/: CMakeLists.txt  keycloak_pkce.py  standalone.py
